--- a/MemoryGame/gra.html
+++ b/MemoryGame/gra.html
@@ -53,7 +53,7 @@
           </article>
 
         </main>
-
+        <script src="jquery-3.2.1.min.js"></script>
         <script src="memory.js"></script>
 
 </body>
